Remove duplicating generators from Jenny.properties

--- a/Jenny.properties
+++ b/Jenny.properties
@@ -38,10 +38,8 @@ Jenny.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentGenerator, \
                        Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator, \
                        Editor.CustomGenerators.SingleValueComponentContextPropertyGenerator, \
                        Editor.CustomGenerators.SingleValueComponentEntityApiInterfaceGenerator, \
-                       Editor.CustomGenerators.SingleValueComponentPropertyGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentContextApiGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentEntityApiGenerator, \
-                       Entitas.CodeGeneration.Plugins.ComponentEntityApiInterfaceGenerator
+                       Editor.CustomGenerators.SingleValueComponentPropertyGenerator
+
 
 Jenny.PostProcessors = DesperateDevs.CodeGeneration.Plugins.AddFileHeaderPostProcessor, \
                        DesperateDevs.CodeGeneration.Plugins.CleanTargetDirectoryPostProcessor, \
